--- a/environment.yml
+++ b/environment.yml
@@ -1,92 +1,102 @@
 name: adverserial-object-segmentation
 channels:
-  - soumith
+  - pytorch
   - defaults
 dependencies:
-  - bokeh=0.12.15=py36_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py36_0
-  - cffi=1.11.5=py36h9745a5d_0
-  - click=6.7=py36h5253387_0
-  - cloudpickle=0.5.2=py36_1
-  - cycler=0.10.0=py36h93f1223_0
-  - cython=0.28.2=py36h14c3975_0
-  - cytoolz=0.9.0.1=py36h14c3975_0
-  - dask=0.17.4=py36_0
-  - dask-core=0.17.4=py36_0
-  - dbus=1.13.2=h714fa37_1
-  - decorator=4.3.0=py36_0
-  - distributed=1.21.8=py36_0
-  - expat=2.2.5=he0dffb1_0
-  - fontconfig=2.12.6=h49f89f6_0
-  - freetype=2.8=hab7d2ae_1
-  - glib=2.56.1=h000015b_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - heapdict=1.0.0=py36_2
-  - icu=58.2=h9c2bf20_1
-  - imageio=2.3.0=py36_0
-  - intel-openmp=2018.0.0=8
-  - jinja2=2.10=py36ha16c418_0
-  - jpeg=9b=h024ee3a_2
-  - kiwisolver=1.0.1=py36h764f252_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libgfortran-ng=7.2.0=hdf63c60_3
-  - libpng=1.6.34=hb9fc6fc_0
-  - libstdcxx-ng=7.2.0=hdf63c60_3
-  - libtiff=4.0.9=he85c1e1_1
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=hf84eae3_0
-  - locket=0.2.0=py36h787c0ad_1
-  - markupsafe=1.0=py36hd9260cd_1
-  - matplotlib=2.2.2=py36h0e671d2_1
-  - mkl=2018.0.2=1
-  - mkl_fft=1.0.1=py36h3010b51_0
-  - mkl_random=1.0.1=py36h629b387_0
-  - msgpack-python=0.5.6=py36h6bb024c_0
-  - ncurses=6.1=hf484d3e_0
-  - networkx=2.1=py36_0
-  - numpy=1.14.3=py36h14a74c5_0
-  - numpy-base=1.14.3=py36hdbf6ddf_0
-  - olefile=0.45.1=py36_0
-  - openssl=1.0.2o=h20670df_0
-  - packaging=17.1=py36_0
-  - pandas=0.22.0=py36hf484d3e_0
-  - partd=0.3.8=py36h36fd896_0
-  - pcre=8.42=h439df22_0
-  - pillow=5.1.0=py36h3deb7b8_0
-  - pip=10.0.1=py36_0
-  - psutil=5.4.5=py36h14c3975_0
-  - pycparser=2.18=py36hf9f622e_1
-  - pyparsing=2.2.0=py36hee85983_1
-  - pyqt=5.9.2=py36h751905a_0
-  - python=3.6.5=hc3d631a_2
-  - python-dateutil=2.7.2=py36_0
-  - pytz=2018.4=py36_0
-  - pywavelets=0.5.2=py36he602eb0_0
-  - pyyaml=3.12=py36hafb9ca4_1
-  - qt=5.9.5=h7e424d6_0
-  - readline=7.0=ha6073c6_4
-  - scikit-image=0.13.1=py36h14c3975_1
-  - scipy=1.1.0=py36hfc37229_0
-  - setuptools=39.1.0=py36_0
-  - sip=4.19.8=py36hf484d3e_0
-  - six=1.11.0=py36h372c433_1
-  - sortedcontainers=1.5.10=py36_0
-  - sqlite=3.23.1=he433501_0
-  - tblib=1.3.2=py36h34cf8b6_0
-  - tk=8.6.7=hc745277_3
-  - toolz=0.9.0=py36_0
-  - tornado=5.0.2=py36_0
-  - wheel=0.31.0=py36_0
-  - xz=5.2.3=h5e939de_4
-  - yaml=0.1.7=had09818_2
-  - zict=0.1.3=py36h3a3bf81_0
-  - zlib=1.2.11=ha838bed_2
-  - cuda91=1.0=h4c16780_0
-  - pytorch=0.3.1=py36_cuda9.1.85_cudnn7.0.5_2
+  - asn1crypto=0.24.0
+  - bokeh=0.12.15
+  - ca-certificates=2018.03.07
+  - certifi=2018.4.16
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - click=6.7
+  - cloudpickle=0.5.2
+  - cryptography=2.2.2
+  - cycler=0.10.0
+  - cython=0.28.2
+  - cytoolz=0.9.0.1
+  - dask=0.17.4
+  - dask-core=0.17.4
+  - dbus=1.13.2
+  - decorator=4.3.0
+  - distributed=1.21.8
+  - expat=2.2.5
+  - fontconfig=2.12.6
+  - freetype=2.8
+  - glib=2.56.1
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - heapdict=1.0.0
+  - icu=58.2
+  - idna=2.6
+  - imageio=2.3.0
+  - intel-openmp=2018.0.0
+  - jinja2=2.10
+  - jpeg=9b
+  - kiwisolver=1.0.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgcc-ng=7.2.0
+  - libgfortran-ng=7.2.0
+  - libpng=1.6.34
+  - libstdcxx-ng=7.2.0
+  - libtiff=4.0.9
+  - libxcb=1.13
+  - libxml2=2.9.8
+  - locket=0.2.0
+  - markupsafe=1.0
+  - matplotlib=2.2.2
+  - mkl=2018.0.2
+  - mkl_fft=1.0.1
+  - mkl_random=1.0.1
+  - msgpack-python=0.5.6
+  - ncurses=6.1
+  - networkx=2.1
+  - ninja=1.8.2
+  - numpy=1.14.3
+  - numpy-base=1.14.3
+  - olefile=0.45.1
+  - openssl=1.0.2o
+  - packaging=17.1
+  - pandas=0.22.0
+  - partd=0.3.8
+  - pcre=8.42
+  - pillow=5.1.0
+  - pip=10.0.1
+  - psutil=5.4.5
+  - pycparser=2.18
+  - pyopenssl=18.0.0
+  - pyparsing=2.2.0
+  - pyqt=5.9.2
+  - pysocks=1.6.8
+  - python=3.6.5
+  - python-dateutil=2.7.2
+  - pytz=2018.4
+  - pywavelets=0.5.2
+  - pyyaml=3.12
+  - qt=5.9.5
+  - readline=7.0
+  - requests=2.18.4
+  - scikit-image=0.13.1
+  - scipy=1.1.0
+  - setuptools=39.1.0
+  - sip=4.19.8
+  - six=1.11.0
+  - sortedcontainers=1.5.10
+  - sqlite=3.23.1
+  - tblib=1.3.2
+  - tk=8.6.7
+  - toolz=0.9.0
+  - tornado=5.0.2
+  - urllib3=1.22
+  - wheel=0.31.0
+  - xz=5.2.3
+  - yaml=0.1.7
+  - zict=0.1.3
+  - zlib=1.2.11
+  - cuda91=1.0
+  - pytorch=0.4.0
+  - torchvision=0.2.1
   - pip:
-    - torch==0.3.1.post2
+    - torch==0.4.0
 
