--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,21 @@
-name: adverserial-object-segmentation
+name: adversarial-object-segmentation
 channels:
   - pytorch
+  - soumith
+  - conda-forge
   - defaults
 dependencies:
+  - av=0.4.0
+  - bzip2=1.0.6
+  - certifi=2018.4.16
+  - ffmpeg=3.2.4
+  - libiconv=1.15
+  - openssl=1.0.2o
+  - x264=20131218
   - asn1crypto=0.24.0
+  - blas=1.0
   - bokeh=0.12.15
   - ca-certificates=2018.03.07
-  - certifi=2018.4.16
   - cffi=1.11.5
   - chardet=3.0.4
   - click=6.7
@@ -56,7 +65,6 @@ dependencies:
   - numpy=1.14.3
   - numpy-base=1.14.3
   - olefile=0.45.1
-  - openssl=1.0.2o
   - packaging=17.1
   - pandas=0.22.0
   - partd=0.3.8
@@ -94,9 +102,10 @@ dependencies:
   - yaml=0.1.7
   - zict=0.1.3
   - zlib=1.2.11
+  - torchvision=0.2.0
   - cuda91=1.0
-  - pytorch=0.4.0
-  - torchvision=0.2.1
+  - pytorch=0.3.1
   - pip:
-    - torch==0.4.0
+    - torch==0.3.1.post2
+prefix: /home/tim/anaconda3/envs/adversarial-object-segmentation
 
